# Assignment-2-XG

./: README.md  delete_later.ipynb  installed_packages.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
regression/: __init__.py  logreg.py  utils.py
test/: test_logreg.py
